contrast fix css

--- a/styles/messenger.module.scss
+++ b/styles/messenger.module.scss
@@ -1,4 +1,5 @@
 .main {
+    font-size: var(--font-size-3);
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -13,16 +14,15 @@
     padding: var(--size-3);
 
     .message {
-        font-size: var(--font-size-5);
+        color: var(--gray-4);
         background: var(--red-7);
         border-radius: var(--radius-4);
-        padding: 0px var(--size-3);
+        padding: var(--size-2) var(--size-3);
     }
 }
 
 .input-base {
     display: flex;
-    font-size: var(--font-size-5);
     padding: var(--size-3);
     gap: var(--size-2);
 
@@ -31,7 +31,7 @@
         background: var(--surface-4);
         border-radius: var(--radius-4);
         border: var(--border-size-2) solid var(--text-2);
-        padding: 0px var(--size-3);
+        padding: var(--size-2) var(--size-3);
 
         &:focus {
             outline: none;
